# rustick

./: .SRCINFO  .gitignore  AppImageBuilder.yml  CONTRIBUTING.es.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  PKGBUILD  Pomodoro-Timer-0.1.0-x86_64.squashfs  README.md  SPEC.md  create_appimage.sh  package-lock.json  package.json
.github/workflows/: build.yml
AppDir/: .DirIcon  AppRun  pomodoro-timer.desktop
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
