[package]
name = "pomodoro-timer"
version = "0.1.0"
description = "A minimalist Pomodoro timer with system tray support"
authors = ["Ori"]
edition = "2021"

[lib]
name = "pomodoro_timer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
log = "0.4"
